[package]
name = "whisper"
version = "0.1.0"
authors = ["hatoo <hato2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.2"
rand = "0.7"
winapi = "0.3"

iced = { git = "https://github.com/hatoo/iced.git", branch = "run_generator" }
iced_winit = { git = "https://github.com/hatoo/iced.git", branch = "run_generator" }
iced_wgpu = { git = "https://github.com/hatoo/iced.git", branch = "run_generator" }

[lib]
name = "whisper"
crate-type = ["cdylib"]